--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-crispy-forms = "*"
 pillow = "*"
 "boto3" = "==1.5.0"
 django-storages = "==1.6.3"
+gunicorn = "==19.9.0"
 
 [requires]
 python_version = "3.7"
