--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,7 @@ uritemplate = "==3.0.0"
 urllib3 = "==1.25.3"
 Django = "==2.2.1"
 Pillow = "==6.0.0"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
