--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ botocore==1.12.156
 cachetools==3.1.1
 certifi==2019.3.9
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.2.1
 django-crispy-forms==1.7.2
+django-heroku==0.3.1
 django-storages==1.7.1
 docutils==0.14
 google-api-python-client==1.7.9
@@ -12,6 +14,7 @@ google-auth==1.6.3
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.3.0
 gunicorn==19.9.0
+heroku==0.1.4
 httplib2==0.12.3
 idna==2.8
 jmespath==0.9.4
@@ -29,3 +32,4 @@ six==1.12.0
 sqlparse==0.3.0
 uritemplate==3.0.0
 urllib3==1.25.3
+whitenoise==4.1.2
